# ReserveEaseServer

./: pyproject.toml
reserve_ease_server/: connect_supabase.py  main.py
reserve_ease_server/query/: create_events_table.sql  create_user_table.sql
